--- a/home-loan-calculator/home-loan-calculator.html
+++ b/home-loan-calculator/home-loan-calculator.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Home Loan Part Payment Calculator
+title: Home loan part payment calculator
 permalink: /home-loan-calculator/
 ---
 
